<resources>
    <string name="app_name">MisLugares</string>
    <string name="action_settings">Settings</string>
    <string name="mostrar_lugares">Mostrar Lugares</string>
    <string name="preferencias">Preferencias</string>
    <string name="acerca_de">Acerca De</string>
    <string name="Salir">Salir</string>
    <string name="nombre">Nombre:</string>
    <string name="hintName">Introduzca su nombre:</string>
    <string name="direccion">Direccion:</string>
    <string name="hintAdress">Introduzca su direccion</string>
    <string name="telefono">Telefono:</string>
    <string name="hintPhone">Introduzca su telefono</string>
    <string name="url">URL:</string>
    <string name="hintUrl">Introduzca url</string>
    <string name="comentario">Comentario:</string>
    <string name="hintCommentary">Introduzca comentario</string>
    <string name="type">Tipo:</string>
</resources>
