<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintName"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintAdress"
            android:inputType="text"
            android:ems="20"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintPhone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintUrl"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_commentary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_commentary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:hint="@string/hintCommentary" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>