<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_buttons"
        android:gravity="center">


        <Button
            android:id="@+id/btn_mostrarLugares"
            android:backgroundTint="#ffc107"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mostrar_lugares" />

        <Button
            android:id="@+id/btn_preferencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="@string/preferencias" />

        <Button
            android:id="@+id/btn_acercaDe"
            style="@style/EstiloBoton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de"
            android:typeface="monospace" />

        <Button
            style="@style/buttonStyle"
            android:id="@+id/btn_salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Salir"
            android:onClick="salir"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>